[gd_scene load_steps=5 format=3 uid="uid://game_ss"]

[ext_resource type="Script" path="res://scripts/game.gd" id="1_game"]
[ext_resource type="PackedScene" uid="uid://player_ss" path="res://scenes/player.tscn" id="2_player"]
[ext_resource type="PackedScene" uid="uid://tutorial_overlay" path="res://scenes/tutorial_overlay.tscn" id="3_tutorial"]

[sub_resource type="RectangleShape2D" id="RectangleShape2D_ground"]
size = Vector2(480, 120)

[node name="Game" type="Node2D"]
script = ExtResource("1_game")

[node name="Background" type="ColorRect" parent="."]
offset_right = 480.0
offset_bottom = 800.0
color = Color(0.5, 0.55, 0.6, 1)

[node name="Ground" type="StaticBody2D" parent="."]
position = Vector2(240, 680)

[node name="GroundRect" type="ColorRect" parent="Ground"]
offset_left = -240.0
offset_top = -10.0
offset_right = 240.0
offset_bottom = 130.0
color = Color(0.25, 0.25, 0.28, 1)

[node name="CollisionShape2D" type="CollisionShape2D" parent="Ground"]
position = Vector2(0, 60)
shape = SubResource("RectangleShape2D_ground")

[node name="Player" parent="." instance=ExtResource("2_player")]

[node name="ObstacleContainer" type="Node2D" parent="."]

[node name="CoinContainer" type="Node2D" parent="."]

[node name="ObstacleTimer" type="Timer" parent="."]
wait_time = 1.5

[node name="UI" type="CanvasLayer" parent="."]

[node name="TopBar" type="ColorRect" parent="UI"]
offset_right = 480.0
offset_bottom = 75.0
color = Color(0, 0, 0, 0.45)

[node name="WorldLabel" type="Label" parent="UI"]
offset_left = 15.0
offset_top = 8.0
offset_right = 180.0
offset_bottom = 28.0
theme_override_font_sizes/font_size = 14
text = "üõ£Ô∏è Road"

[node name="LevelLabel" type="Label" parent="UI"]
offset_left = 15.0
offset_top = 28.0
offset_right = 200.0
offset_bottom = 48.0
theme_override_font_sizes/font_size = 13
text = "Suburban Street"

[node name="DifficultyLabel" type="Label" parent="UI"]
offset_left = 15.0
offset_top = 48.0
offset_right = 100.0
offset_bottom = 65.0
theme_override_font_sizes/font_size = 12
text = "‚ö° 1.0"

[node name="ScoreLabel" type="Label" parent="UI"]
offset_left = 200.0
offset_top = 22.0
offset_right = 280.0
offset_bottom = 62.0
theme_override_font_sizes/font_size = 34
text = "0"
horizontal_alignment = 1

[node name="CoinLabel" type="Label" parent="UI"]
offset_left = 380.0
offset_top = 12.0
offset_right = 465.0
offset_bottom = 35.0
theme_override_colors/font_color = Color(1, 0.85, 0, 1)
theme_override_font_sizes/font_size = 16
text = " 0"
horizontal_alignment = 2

[node name="ProgressBar" type="ProgressBar" parent="UI"]
offset_left = 300.0
offset_top = 42.0
offset_right = 465.0
offset_bottom = 58.0
value = 0.0
show_percentage = false

[node name="PauseButton" type="Button" parent="UI"]
offset_left = 15.0
offset_top = 40.0
offset_right = 55.0
offset_bottom = 70.0
theme_override_font_sizes/font_size = 20
text = "‚è∏"

[node name="GameOverPanel" type="Panel" parent="UI"]
visible = false
offset_left = 45.0
offset_top = 260.0
offset_right = 435.0
offset_bottom = 540.0

[node name="VBoxContainer" type="VBoxContainer" parent="UI/GameOverPanel"]
offset_left = 18.0
offset_top = 18.0
offset_right = 372.0
offset_bottom = 262.0
theme_override_constants/separation = 14

[node name="GameOverLabel" type="Label" parent="UI/GameOverPanel/VBoxContainer"]
custom_minimum_size = Vector2(0, 45)
theme_override_colors/font_color = Color(1, 0.35, 0.35, 1)
theme_override_font_sizes/font_size = 32
text = "GAME OVER"
horizontal_alignment = 1

[node name="FinalScoreLabel" type="Label" parent="UI/GameOverPanel/VBoxContainer"]
theme_override_font_sizes/font_size = 22
text = "Score: 0"
horizontal_alignment = 1

[node name="CoinsLabel" type="Label" parent="UI/GameOverPanel/VBoxContainer"]
theme_override_font_sizes/font_size = 16
text = "Coins: +0"
horizontal_alignment = 1

[node name="HBoxContainer" type="HBoxContainer" parent="UI/GameOverPanel/VBoxContainer"]
alignment = 1
theme_override_constants/separation = 14

[node name="RetryButton" type="Button" parent="UI/GameOverPanel/VBoxContainer/HBoxContainer"]
custom_minimum_size = Vector2(95, 42)
text = "RETRY"

[node name="ShopButton" type="Button" parent="UI/GameOverPanel/VBoxContainer/HBoxContainer"]
custom_minimum_size = Vector2(95, 42)
text = "SHOP"

[node name="MenuButton" type="Button" parent="UI/GameOverPanel/VBoxContainer"]
custom_minimum_size = Vector2(0, 38)
text = "LEVELS"

[node name="PausePanel" type="Panel" parent="UI"]
visible = false
process_mode = 2
offset_left = 65.0
offset_top = 200.0
offset_right = 415.0
offset_bottom = 600.0

[node name="VBoxContainer" type="VBoxContainer" parent="UI/PausePanel"]
offset_left = 18.0
offset_top = 18.0
offset_right = 332.0
offset_bottom = 382.0
theme_override_constants/separation = 12

[node name="PausedLabel" type="Label" parent="UI/PausePanel/VBoxContainer"]
theme_override_font_sizes/font_size = 32
text = "PAUSED"
horizontal_alignment = 1

[node name="ResumeButton" type="Button" parent="UI/PausePanel/VBoxContainer"]
custom_minimum_size = Vector2(0, 48)
text = "‚ñ∂  RESUME"

[node name="SettingsLabel" type="Label" parent="UI/PausePanel/VBoxContainer"]
custom_minimum_size = Vector2(0, 30)
theme_override_font_sizes/font_size = 18
text = "Settings"
horizontal_alignment = 1

[node name="MusicToggle" type="Button" parent="UI/PausePanel/VBoxContainer"]
custom_minimum_size = Vector2(0, 42)
toggle_mode = true
text = "Music: ON"

[node name="SFXToggle" type="Button" parent="UI/PausePanel/VBoxContainer"]
custom_minimum_size = Vector2(0, 42)
toggle_mode = true
text = "Sounds: ON"

[node name="QuitButton" type="Button" parent="UI/PausePanel/VBoxContainer"]
custom_minimum_size = Vector2(0, 48)
text = "QUIT"

[connection signal="timeout" from="ObstacleTimer" to="." method="_on_obstacle_timer_timeout"]
[connection signal="pressed" from="UI/PauseButton" to="." method="_on_pause_button_pressed"]
[connection signal="pressed" from="UI/GameOverPanel/VBoxContainer/HBoxContainer/RetryButton" to="." method="_on_retry_button_pressed"]
[connection signal="pressed" from="UI/GameOverPanel/VBoxContainer/HBoxContainer/ShopButton" to="." method="_on_shop_button_pressed"]
[connection signal="pressed" from="UI/GameOverPanel/VBoxContainer/MenuButton" to="." method="_on_menu_button_pressed"]
[connection signal="pressed" from="UI/PausePanel/VBoxContainer/ResumeButton" to="." method="_on_resume_button_pressed"]
[connection signal="pressed" from="UI/PausePanel/VBoxContainer/MusicToggle" to="." method="_on_music_toggle_pressed"]
[connection signal="pressed" from="UI/PausePanel/VBoxContainer/SFXToggle" to="." method="_on_sfx_toggle_pressed"]
[connection signal="pressed" from="UI/PausePanel/VBoxContainer/QuitButton" to="." method="_on_quit_button_pressed"]

[node name="TutorialOverlay" parent="." instance=ExtResource("3_tutorial")]
